[package]
name = "rcache"
version = "0.10.4"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
crc16 = "0.4"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "full"] }
http-body-util = "0.1"
serde_json = "1"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
lz4_flex = "0.11"
sha2 = "0.10"

[dev-dependencies]
redis = { version = "0.27", features = ["tokio-comp"] }
